[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ratstaff"
version = "0.1.0"
description = "Dice Bot for discord"
authors = ["Will Kelly <will.kelly@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
dice = "*"
click = "^7.0"
"discord.py" = "^0.16.12"

[tool.poetry.scripts]
ratstaff = "ratstaff:main"
