[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ratstaff"
version = "0.1.0"
description = "Dice Bot for discord"
authors = ["Will Kelly <will.kelly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
click = "^7.0"
"discord.py" = "^0.16.12"
xdice = "^1.1"
pypandoc = "^1.4"

[tool.poetry.scripts]
ratstaff = "ratstaff:main"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.10.0"
